# synference

./: .gitignore  AUTHORS.rst  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish_pypi.yml  python-app.yml
docs/: CONTRIBUTING.md
docs/source/: API.rst  conf.py  index.rst
docs/source/FAQ/: FAQ.rst
docs/source/advanced_topics/: advanced_topics.rst  bpass_nested_samples.csv.REMOVED.git-id  custom_loop.ipynb  fsps_nested_samples.csv.REMOVED.git-id  nle.ipynb  simformer.ipynb
docs/source/example_grids/: test_model_grid.hdf5  test_model_grid.hdf5.REMOVED.git-id
docs/source/example_libraries/: example_model_library.hdf5
docs/source/getting_started/: contributing.rst  getting_started.rst  installation.rst  overview.rst
docs/source/gfx/: SBI_SED.png.REMOVED.git-id
docs/source/library_gen/: basic_library_generation.ipynb  bring_your_own_grid.ipynb  bring_your_own_library.ipynb  complex_library_generation.ipynb  complex_library_generation.rst  library_generation.rst  multithreading_library_generation.ipynb  multithreading_library_generation.rst  synthesizer_crash_course.ipynb
docs/source/noise_modelling/: creating_noise_model.rst  noise_models.ipynb
docs/source/notebook_examples/: cookbook.rst
docs/source/posterior_inference/: catalogue_fitting.ipynb  catalogue_fitting.ipynb.REMOVED.git-id  intro.rst  sed_recovery.ipynb  sed_recovery.ipynb.REMOVED.git-id  sed_recovery.rst  using_your_model.ipynb  using_your_model.rst
docs/source/sbi/: NPE.rst  SBI.ipynb  SBI.rst  introduction_to_sbi.rst
docs/source/sbi_train/: basic_sbi_model.ipynb  basic_sbi_model.ipynb.REMOVED.git-id  basic_sbi_model.rst  complex_sbi_model.ipynb  custom_sbi_model.rst  feature_array.ipynb  feature_array.rst  intro_sbi.rst  model_optimization.ipynb  model_validation.ipynb  model_validation.rst  online_sbi_model.rst  online_training.ipynb  validation_mcmc.rst  validation_sampling.ipynb
examples/: README.rst
examples/grid_generation/: README.rst  batch_grid_generation.py  final_grid_generation.py  final_grid_generation_multinode.py  fixed_params.py  generate_grid_basic.py  generate_grid_full.py  generate_grid_lhc.py  generate_grid_lhc_standard_sps.py  generate_grid_lhc_standard_sps_full_SED.py  grab_filters_for_node.py  make_grid.slurm  min_example.py
examples/grid_generation/scripts/: batch_grid_generation.py  final_grid_generation.py  final_grid_generation_multinode.py  fixed_params.py  generate_agn_grid.py  generate_grid_basic.py  generate_grid_full.py  generate_pop3_grid.py  generate_spectral_grid.py  grab_filters_for_node.py  make_grid.slurm  min_example.py
examples/library_generation/scripts/: batch_library_generation.py  final_library_generation.py  final_library_generation_multinode.py  fixed_params.py  generate_agn_library.py  generate_library_basic.py  generate_library_full.py  generate_pop3_library.py  generate_spectral_library.py  grab_filters_for_node.py  make_library.slurm  min_example.py
examples/online/: README.rst  active_learning.ipynb  online_learning.ipynb  online_learning.py
examples/online/notebooks/: active_learning.ipynb  online_learning.ipynb
examples/paper/: bagpipes_comparison.ipynb  model_testing.ipynb  obs.ipynb  redshift_inference.ipynb
examples/sbi/: README.rst  basic_model.py  best_params.yaml  custom_loop.yaml  custom_loop_mdn.yaml  custom_loop_test.yaml  empirical_noise_model.ipynb  empirical_noise_model.ipynb.REMOVED.git-id  min_example.py  model_comparison.ipynb  model_comparison.ipynb.REMOVED.git-id  optimize_model.slurm  optimize_sbi.ipynb  test_missing_photometry.ipynb  train_final_model.slurm  train_model.py  train_model.slurm  train_model_ensemble.ipynb  train_model_ensemble.ipynb.REMOVED.git-id  train_spectral_model.ipynb  validate_model.ipynb  validate_model.ipynb.REMOVED.git-id  wait_for_gpu.py
examples/simformer/: README.rst  fit_simformer_model.py  integrated_simformer_testing.ipynb  second_test.ipynb  second_test.ipynb.REMOVED.git-id  simformer.py  simformer_testing.ipynb  simformer_testing.ipynb.REMOVED.git-id
grids/: README.txt
models/: README.txt
paper/: bagpipes_comparison.ipynb  missing_data.ipynb  model_testing.ipynb  obs.ipynb  redshift_inference.ipynb
scripts/: README.txt  evidence.ipynb  generate_grid.ipynb  generate_grid.py  generate_grid_lhc.py  generate_grid_lhc_standard_sps.py  proof_of_concept.ipynb  train_model.ipynb  train_model.ipynb.REMOVED.git-id  train_model.py
scripts/grid_generation/: generate_grid copy.ipynb  generate_grid.py  generate_grid_lhc.py  generate_grid_lhc_standard_sps.py  generate_grid_lhc_standard_sps_full_SED.py  generate_grid_lhc_ygridassil.py  make_grid.slurm
scripts/online/: active_learning.ipynb  online_learning.ipynb  online_learning.py
scripts/other/: grab_filters_for_node.py  random.ipynb  random.ipynb.REMOVED.git-id
scripts/sbi/: SBI_training.py  empirical_noise_model.ipynb  empirical_noise_model.ipynb.REMOVED.git-id  evidence.ipynb  full_galaxy_fitting.ipynb  min_example.py  model_comparison.ipynb  model_comparison.ipynb.REMOVED.git-id  optimize_sbi.ipynb  pop3.ipynb  proof_of_concept.ipynb  proof_of_concept.ipynb.REMOVED.git-id  test_missing_photometry.ipynb  train_model.ipynb  train_model.ipynb.REMOVED.git-id  train_model.py  train_model_ensemble.ipynb  train_model_ensemble.ipynb.REMOVED.git-id
scripts/simformer/: second_test.ipynb  second_test.ipynb.REMOVED.git-id  simformer.py  simformer_testing.ipynb.REMOVED.git-id
src/ltu_ili_testing/: __init__.py  grid.py  sbi.py
src/sbifitter/: __init__.py  custom_runner.py  grid.py  noise_models.py  sbi.py  sbi_runner.py  simformer.py  utils.py
src/synference/: __init__.py  custom_runner.py  grid.py  library.py  noise_models.py  sbi_runner.py  simformer.py  utils.py
tests/: basis_tests.py  conftest.py  test_grids.py  test_library.py  test_sbi.py  test_sbi_runner.py  test_simulator.py  test_uncertainty_models.py
tests/test_grids/: sbi_test_grid.hdf5  sps_test_grid.hdf5.REMOVED.git-id
tests/test_libraries/: sbi_test_library.hdf5  sbi_test_library.hdf5.REMOVED.git-id
(+44 files in other folders)
