[project]
name = "ltu-ili-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tharvey303", email = "tharvey303@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argcomplete==3.6.2",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "audioread==3.0.1",
    "babel==2.17.0",
    "barectf",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "boto3==1.37.34",
    "botocore==1.37.34",
    "build==1.2.2.post1",
    "cerberus==1.3.7",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "clang==20.1.0",
    "colorlover==0.3.0",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cppheaderparser==2.7.4",
    "cufflinks==0.17.3",
    "cycler==0.12.1",
    "cython<=3.0.0",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "diffusers==0.30.0",
    "emcee>=3.1.6",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fonttools==4.57.0",
    "fqdn==1.5.1",
    "fsspec==2025.3.2",
    "future==1.0.0",
    "h11==0.14.0",
    "h5py==3.13.0",
    "harmonic==1.2.3",
    "hjson==3.1.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "huggingface-hub==0.30.2",
    "hypothesis==6.131.0",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.6.1",
    "ipykernel==6.29.5",
    "ipython==9.1.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.6",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "json5==0.12.0",
    "jsonpointer==3.0.0",
    "jsonschema<=4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.0",
    "jupyterlab-git>=0.51.1",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server<=2.27.3",
    "jupyterlab-widgets==3.0.14",
    "keras-preprocessing==1.1.2",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "lckr-jupyterlab-variableinspector>=3.2.4",
    "leveldb==0.201",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "lxml==5.3.2",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "mpi4py",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "narwhals==1.35.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "ninja==1.11.1.4",
    "notebook==7.4.0",
    "notebook-shim==0.2.4",
    "numpy==1.26.3",
    "onnx==1.17.0",
    "opt-einsum==3.4.0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathlib>=1.0.1",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.7",
    "plotly==6.0.1",
    "ply==3.11",
    "pooch==1.8.2",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.51",
    "protobuf==6.30.2",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyaml==25.1.0",
    "pybind11==2.13.6",
    "pybind11-global==2.13.6",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydot==3.0.4",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pyproject-hooks==1.2.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.16",
    "pyqt5-sip==12.17.0",
    "pyrsistent==0.20.0",
    "pytest>=8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-gflags==3.1.2",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.24.0",
    "s3transfer==0.11.4",
    "safetensors==0.5.3",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "setuptools-scm==8.2.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soundfile==0.13.1",
    "soupsieve==2.6",
    "soxr==0.5.0.post1",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tabulate==0.9.0",
    "termcolor==1.1.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tifffile==2025.3.30",
    "tinycss2==1.4.0",
    "tokenizers==0.20.3",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.45.0",
    "types-python-dateutil==2.9.0.20241206",
    "typing==3.7.4.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "widgetsnbextension==4.0.14",
    "xarray>=2025.3.1",
    "zipp==3.21.0",
]

[project.optional-dependencies]
sbi = {
    "dask-ml>=2025.1.0",
    "lampe>=0.9.0",
    "numba==0.61.2",
    "opencv-python==4.11.0.86",
    "optuna>=4.3.0",
    "sbi>=0.22.0",
    "torch",
    "tarp",
    "torch-migraphx",
    "torchaudio",
    "torchvision",
    "deepspeed",
    "bitsandbytes",
    "mpi4py",
    "triton",
}

tharvey-local = {
    "dask-ml>=2025.1.0",
    "lampe>=0.9.0",
    "numba==0.61.2",
    "opencv-python==4.11.0.86",
    "optuna>=4.3.0",
    "tarp",
    "sbi>=0.22.0",
    "amdsmi",
    "torch",
    "torch-migraphx",
    "torchaudio",
    "torchvision",
    "bitsandbytes",
    "mpi4py",
    "onnxruntime-training",
    "triton",
}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
amdsmi = { path = "../../../../opt/rocm_sdk_612/share/amd_smi" }
bitsandbytes = { path = "../rocm_sdk_builder/src_projects/bitsandbytes/dist/bitsandbytes-0.43.2.dev0-cp311-cp311-linux_x86_64.whl" }
deepspeed = { path = "../rocm_sdk_builder/src_projects/DeepSpeed/dist/deepspeed-0.15.1+a1192ea7-cp311-cp311-linux_x86_64.whl" }
mpi4py = { path = "../rocm_sdk_builder/src_projects/mpi4py/dist/mpi4py-4.0.3-cp311-cp311-linux_x86_64.whl" }
onnxruntime-training = { path = "../rocm_sdk_builder/src_projects/onnxruntime/build/Linux/Release/dist/onnxruntime_training-1.18.1+cpu-cp311-cp311-linux_x86_64.whl" }
torch = { path = "../rocm_sdk_builder/src_projects/pytorch/dist/torch-2.4.1-cp311-cp311-linux_x86_64.whl" }
torch-migraphx = { path = "../rocm_sdk_builder/src_projects/torch_migraphx/py/dist/torch_migraphx-0.0.3-cp311-cp311-linux_x86_64.whl" }
torchaudio = { path = "../rocm_sdk_builder/src_projects/pytorch_audio/dist/torchaudio-2.4.1+2e13dd2-cp311-cp311-linux_x86_64.whl" }
torchvision = { path = "../rocm_sdk_builder/src_projects/pytorch_vision/dist/torchvision-0.20.0a0+4338f09-cp311-cp311-linux_x86_64.whl" }
triton = { path = "../rocm_sdk_builder/src_projects/triton/python/dist/triton-3.0.0+git0fea1b65-cp311-cp311-linux_x86_64.whl" }
tarp = { git = "https://github.com/maho3/tarp.git" }

